name:                west9
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/west9#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     West9, West9Options, West9Sinks
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.0 && < 3
                     , authenticate-oauth >= 1.5 && < 2
                     , text >= 1.2 && < 2
                     , conduit >= 1.2 && < 2
                     , http-conduit >= 2.1 && < 3
                     , attoparsec-conduit >= 1.0 && < 2
                     , conduit-extra >= 1.1 && < 2
                     , transformers >= 0.4 && < 1
                     , aeson >= 0.11 && < 1
                     , bytestring >= 0.10 && < 1
                     , exceptions >= 0.8 && < 1
                     , resourcet >= 1.1 && < 2
                     , utf8-string >= 1.0 && < 2
                     , random >= 1.1 && < 2
                     , lens >= 4.13 && < 5
                     , ConfigFile >= 1.1 && < 2
                     , MissingH >= 1.1 && < 2
                     , optparse-applicative >= 0.11 && < 1
                     , directory >= 1.1 && < 2
  default-language:    Haskell2010

executable west9
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , west9
                     , mtl >= 2.0 && < 3
  default-language:    Haskell2010

executable west9-test
  hs-source-dirs:      app
  main-is:             Test.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , west9
                     , mtl >= 2.0 && < 3
  default-language:    Haskell2010
