name:                west9
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/west9#readme
--license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     West9, West9Options, West9Sinks
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , authenticate-oauth
                     , text
                     , conduit
                     , http-conduit
                     , attoparsec-conduit
                     , conduit-extra
                     , transformers
                     , aeson
                     , bytestring
                     , exceptions
                     , resourcet
                     , utf8-string
                     , random
                     , lens
                     , ConfigFile
                     , MissingH
                     , optparse-applicative
                     , directory
                     , time
  default-language:    Haskell2010

executable west9
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , west9
                     , mtl
  default-language:    Haskell2010
